mirtion code doen like but have some work

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/backend": "^2.30.1",
     "@clerk/nextjs": "^6.37.2",
     "@repo/database": "workspace:*",
     "cloudinary": "^2.5.1",
